--- a/web/package.json
+++ b/web/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
+    "react-webcam": "^7.2.0",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
