--- a/web/package.json
+++ b/web/package.json
@@ -38,6 +38,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-player": "^2.14.1",
     "react-router-dom": "^6.18.0",
     "react-webcam": "^7.2.0",
     "sort-by": "^1.2.0",
