--- a/.github/workflows/job-deploy-lambdas.yml
+++ b/.github/workflows/job-deploy-lambdas.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Deploy
         if: steps.changes.outputs.package == 'true'
-        run: sls deploy --stage ${{ inputs.environment }}
+        run: sls deploy --stage ${{ inputs.environment }} --config serverless.yml
         working-directory: lambdas/authentication
 
   lambda-authorizer:
@@ -98,7 +98,7 @@ jobs:
 
       - name: Deploy
         if: steps.changes.outputs.package == 'true'
-        run: sls deploy --stage ${{ inputs.environment }}
+        run: sls deploy --stage ${{ inputs.environment }} --config serverless.yml
         working-directory: lambdas/authorizer
 
   lambdas:
@@ -156,5 +156,5 @@ jobs:
 
       - name: Deploy
         if: steps.changes.outputs.package == 'true'
-        run: sls deploy --stage ${{ inputs.environment }}
+        run: sls deploy --stage ${{ inputs.environment }} --config serverless.yml
         working-directory: lambdas/${{ matrix.package }}
