chore(ci): sentry web environment should be lowercase

--- a/.github/workflows/job-deploy-website.yml
+++ b/.github/workflows/job-deploy-website.yml
@@ -50,7 +50,7 @@ jobs:
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
-          SENTRY_ENVIRONMENT: ${{ inputs.environment-label }}
+          SENTRY_ENVIRONMENT: ${{ inputs.environment }}
           SENTRY_ORG: ${{ vars.SENTRY_ORG }}
           SENTRY_PROJECT: ${{ vars.SENTRY_PROJECT }}
         working-directory: web
