--- a/lambdas/authorizer/Dockerfile
+++ b/lambdas/authorizer/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR ${LAMBDA_TASK_ROOT}
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
+COPY package.json package.json
 COPY *.py .
 
 # actual command will be in serverless.yml
