--- a/lambdas/candidate/requirements.txt
+++ b/lambdas/candidate/requirements.txt
@@ -1,23 +1,35 @@
 annotated-types==0.6.0
 anyio==4.2.0
+bcrypt==4.0.1
 boto3==1.34.15
 botocore==1.34.15
 certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+cryptography==41.0.7
 distro==1.9.0
 exceptiongroup==1.2.0
+flake8==6.1.0
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.26.0
 idna==3.6
 jmespath==1.0.1
+mccabe==0.7.0
 openai==1.7.2
 psycopg2-binary==2.9.9
+pycodestyle==2.11.1
+pycparser==2.21
 pydantic==2.5.3
-pydantic_core==2.14.6
+pydantic-core==2.14.6
+pyflakes==3.1.0
+PyJWT==2.8.0
 python-dateutil==2.8.2
+requests==2.31.0
 s3transfer==0.10.0
+sentry-sdk==1.39.2
 six==1.16.0
 sniffio==1.3.0
 tqdm==4.66.1
-typing_extensions==4.9.0
+typing-extensions==4.9.0
 urllib3==1.26.18
