--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,7 @@
     "@sentry/vite-plugin": "^2.10.2",
     "@tanstack/react-table": "^8.10.7",
     "axios": "^1.6.2",
+    "change-case": "^5.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
