--- a/lambdas/candidate/serverless.dev.yml
+++ b/lambdas/candidate/serverless.dev.yml
@@ -50,6 +50,28 @@ functions:
             type: REQUEST
     timeout: 30
 
+  invite:
+    name: ${self:provider.stage}-candidate-invite
+    image:
+      name: default
+      command:
+        - invite.handler
+    events:
+      - http:
+          path: /candidates/invite/{id}
+          method: POST
+          cors:
+            origins: "http://127.0.0.1:5173"
+            allowCredentials: true
+          authorizer:
+            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.AuthorizerId}
+            type: REQUEST
+          request:
+            parameters:
+              paths:
+                id: true
+    timeout: 30
+          
   retrieve:
     name: ${self:provider.stage}-candidate-retrieve
     image:
