--- a/lambdas/interview/serverless.yml
+++ b/lambdas/interview/serverless.yml
@@ -97,15 +97,15 @@ functions:
             type: REQUEST
     timeout: 30
 
-  retrieve-by-id:
-    name: ${self:provider.stage}-interview-retrieve-by-id
+  retrieve-questions-by-id:
+    name: ${self:provider.stage}-interview-retrieve-questions-by-id
     image:
       name: default
       command:
-        - retrieve_by_id.handler
+        - retrieve_questions_by_id.handler
     events:
       - http:
-          path: /interviews/{id}
+          path: /interviews/{id}/questions
           method: GET
           cors:
             origins:
