--- a/lambdas/interview/serverless.dev.yml
+++ b/lambdas/interview/serverless.dev.yml
@@ -107,5 +107,26 @@ functions:
               paths:
                 id: true
 
+  retrieve-results-by-id:
+    name: ${self:provider.stage}-interview-retrieve-results-by-id
+    image:
+      name: default
+      command:
+        - retrieve_results_by_id.handler
+    events:
+      - http:
+          path: /interviews/{id}/results
+          method: GET
+          cors:
+            origins: "http://127.0.0.1:5173"
+            allowCredentials: true
+          authorizer:
+            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.AuthorizerId}
+            type: REQUEST
+          request:
+            parameters:
+              paths:
+                id: true
+
 plugins:
   - serverless-deployment-bucket
