--- a/lambdas/interview/serverless.yml
+++ b/lambdas/interview/serverless.yml
@@ -120,5 +120,28 @@ functions:
               paths:
                 id: true
 
+  retrieve-results-by-id:
+    name: ${self:provider.stage}-interview-retrieve-results-by-id
+    image:
+      name: default
+      command:
+        - retrieve_results_by_id.handler
+    events:
+      - http:
+          path: /interviews/{id}/results
+          method: GET
+          cors:
+            origins:
+              - "https://${ssm:/terraform/staging/domain_name}"
+              - "https://www.${ssm:/terraform/staging/domain_name}"
+            allowCredentials: true
+          authorizer:
+            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.AuthorizerId}
+            type: REQUEST
+          request:
+            parameters:
+              paths:
+                id: true
+
 plugins:
   - serverless-deployment-bucket
