Add parse_header function and generate_success_response function Update evaluate_interview.py and evaluate_question.py Update serverless.dev.yml

--- a/lambdas/interview/serverless.dev.yml
+++ b/lambdas/interview/serverless.dev.yml
@@ -54,7 +54,7 @@ functions:
         - evaluate_interview.handler
     events:
       - http:
-          path: /interviews
+          path: /interviews/{id}
           method: POST
           cors:
             origins: "http://127.0.0.1:5173"
