--- a/lambdas/video/serverless.dev.yml
+++ b/lambdas/video/serverless.dev.yml
@@ -39,9 +39,9 @@ functions:
           cors:
             origins: "http://127.0.0.1:5173"
             allowCredentials: true
-          authorizer:
-            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.AuthorizerId}
-            type: REQUEST
+          # authorizer:
+          #   authorizerId: ${cf:${self:provider.stage}-sls-authorizer.AuthorizerId}
+          #   type: REQUEST
     timeout: 30
 
 plugins:
