--- a/lambdas/video/serverless.yml
+++ b/lambdas/video/serverless.yml
@@ -48,9 +48,9 @@ functions:
               - "https://${ssm:/terraform/staging/domain_name}"
               - "https://www.${ssm:/terraform/staging/domain_name}"
             allowCredentials: true
-          authorizer:
-            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.AuthorizerId}
-            type: REQUEST
+          # authorizer:
+          #   authorizerId: ${cf:${self:provider.stage}-sls-authorizer.AuthorizerId}
+          #   type: REQUEST
     timeout: 30
 
 plugins:
