--- a/lambdas/interview/serverless.dev.yml
+++ b/lambdas/interview/serverless.dev.yml
@@ -59,9 +59,9 @@ functions:
           cors:
             origins: "http://127.0.0.1:5173"
             allowCredentials: true
-          authorizer:
-            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.AuthorizerId}
-            type: REQUEST
+          # authorizer:
+          #   authorizerId: ${cf:${self:provider.stage}-sls-authorizer.AuthorizerId}
+          #   type: REQUEST
           request:
             parameters:
               paths:
@@ -99,9 +99,9 @@ functions:
           cors:
             origins: "http://127.0.0.1:5173"
             allowCredentials: true
-          authorizer:
-            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.AuthorizerId}
-            type: REQUEST
+          # authorizer:
+          #   authorizerId: ${cf:${self:provider.stage}-sls-authorizer.AuthorizerId}
+          #   type: REQUEST
           request:
             parameters:
               paths:
