--- a/.github/workflows/job-deploy-website.yml
+++ b/.github/workflows/job-deploy-website.yml
@@ -48,6 +48,8 @@ jobs:
       - name: Build
         run: npm run build -- --mode ${{ inputs.environment }}
         env:
+          RUDDERSTACK_DATA_PLANE_URL: ${{ secrets.RUDDERSTACK_DATA_PLANE_URL }}
+          RUDDERSTACK_WRITE_KEY: ${{ secrets.RUDDERSTACK_WRITE_KEY }}
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
           SENTRY_ENVIRONMENT: ${{ inputs.environment }}
