--- a/lambdas/candidate/serverless.dev.yml
+++ b/lambdas/candidate/serverless.dev.yml
@@ -24,6 +24,7 @@ provider:
         buildArgs:
   environment:
     ENVIRONMENT: ${self:provider.stage}
+    LINK_BASE_URL: ${ssm:/terraform/${self:provider.stage}/domain_name}
     OPENAI_API_KEY: ${ssm:/secrets/${self:provider.stage}/openai_api_key}
     POSTGRES_HOST: ${ssm:/terraform/${self:provider.stage}/rds/endpoint}
     POSTGRES_PORT: ${ssm:/terraform/${self:provider.stage}/rds/port}
@@ -71,7 +72,7 @@ functions:
               paths:
                 id: true
     timeout: 30
-          
+
   retrieve:
     name: ${self:provider.stage}-candidate-retrieve
     image:
