--- a/lambdas/candidate/requirements.txt
+++ b/lambdas/candidate/requirements.txt
@@ -7,16 +7,24 @@ certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
 cryptography==41.0.7
+decorator==4.4.2
 distro==1.9.0
 exceptiongroup==1.2.0
 flake8==6.1.0
 h11==0.14.0
+html2text==2020.1.16
 httpcore==1.0.2
 httpx==0.26.0
 idna==3.6
+imageio==2.33.1
+imageio-ffmpeg==0.4.9
 jmespath==1.0.1
 mccabe==0.7.0
+moviepy==1.0.3
+numpy==1.26.3
 openai==1.7.2
+pillow==10.2.0
+proglog==0.1.10
 psycopg2-binary==2.9.9
 pycodestyle==2.11.1
 pycparser==2.21
