--- a/lambdas/interview/serverless.yml
+++ b/lambdas/interview/serverless.yml
@@ -68,9 +68,6 @@ functions:
               - "https://${ssm:/terraform/staging/domain_name}"
               - "https://www.${ssm:/terraform/staging/domain_name}"
             allowCredentials: true
-          # authorizer:
-          #   authorizerId: ${cf:${self:provider.stage}-sls-authorizer.AuthorizerId}
-          #   type: REQUEST
           request:
             parameters:
               paths:
@@ -142,6 +139,22 @@ functions:
             parameters:
               paths:
                 id: true
+
+  verify-token:
+    name: ${self:provider.stage}-interview-verify-token
+    image:
+      name: default
+      command:
+        - verify_token.handler
+    events:
+      - http:
+          path: /interviews/verify
+          method: POST
+          cors:
+            origins:
+              - "https://${ssm:/terraform/staging/domain_name}"
+              - "https://www.${ssm:/terraform/staging/domain_name}"
+            allowCredentials: true # may not need?
 
 plugins:
   - serverless-deployment-bucket
