--- a/lambdas/interview/serverless.dev.yml
+++ b/lambdas/interview/serverless.dev.yml
@@ -31,6 +31,7 @@ provider:
     POSTGRES_USER: ${ssm:/terraform/${self:provider.stage}/rds/db_username}
     POSTGRES_PASSWORD: ${ssm:/terraform/${self:provider.stage}/rds/db_password}
     QUESTION_GENERATION_PROCESSOR_QUEUE_URL: ${ssm:/terraform/${self:provider.stage}/sqs/question_generation_processor_queue_url}
+    SERVICE_NAME: ${self:service}
 
 functions:
   evaluate-question:
