--- a/lambdas/interview/serverless.yml
+++ b/lambdas/interview/serverless.yml
@@ -38,6 +38,7 @@ provider:
     POSTGRES_PASSWORD: ${ssm:/terraform/${self:provider.stage}/rds/db_password}
     QUESTION_GENERATION_PROCESSOR_QUEUE_URL: ${ssm:/terraform/${self:provider.stage}/sqs/question_generation_processor_queue_url}
     SENTRY_DSN: ${ssm:/secrets/${self:provider.stage}/sentry_dsn/${self:service}}
+    SERVICE_NAME: ${self:service}
 
 functions:
   evaluate-question:
