refactor(company): split code into client, repo, entity

--- a/lambdas/company/serverless.dev.yml
+++ b/lambdas/company/serverless.dev.yml
@@ -29,6 +29,7 @@ provider:
     POSTGRES_DB: ${ssm:/terraform/${self:provider.stage}/rds/db_name}
     POSTGRES_USER: ${ssm:/terraform/${self:provider.stage}/rds/db_username}
     POSTGRES_PASSWORD: ${ssm:/terraform/${self:provider.stage}/rds/db_password}
+    SERVICE_NAME: ${self:service}
 
 functions:
   me:
