--- a/lambdas/authorizer/Dockerfile
+++ b/lambdas/authorizer/Dockerfile
@@ -7,6 +7,8 @@ RUN pip install -r requirements.txt
 
 COPY package.json package.json
 COPY *.py .
+COPY client/ ./client/
+COPY utils/ ./utils/
 
 # actual command will be in serverless.yml
 CMD [ "handler" ]
