--- a/lambdas/company/serverless.dev.yml
+++ b/lambdas/company/serverless.dev.yml
@@ -46,7 +46,7 @@ functions:
             origins: "http://127.0.0.1:5173"
             allowCredentials: true
           authorizer:
-            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.AuthorizerId}
+            authorizerId: ${cf:${self:provider.stage}-sls-authorizer.CookieAuthorizerId}
             type: REQUEST
 
 plugins:
