refactor(video): split code into client

--- a/lambdas/video/serverless.dev.yml
+++ b/lambdas/video/serverless.dev.yml
@@ -24,6 +24,7 @@ provider:
         buildArgs:
   environment:
     ENVIRONMENT: ${self:provider.stage}
+    SERVICE_NAME: ${self:service}
 
 functions:
   get-presigned-url:
