--- a/lambdas/video/Dockerfile
+++ b/lambdas/video/Dockerfile
@@ -10,7 +10,9 @@ RUN pip install -r requirements.txt
 # Copy the necessary files and directories to the container
 COPY package.json package.json
 COPY *.py .
+COPY client/ ./client/
 COPY utils/ ./utils/
+
 
 # Set the CMD to your handler (this will be overwritten by Lambda)
 CMD ["handler"]
