--- a/lambdas/video/serverless.yml
+++ b/lambdas/video/serverless.yml
@@ -31,6 +31,7 @@ provider:
   environment:
     ENVIRONMENT: ${self:provider.stage}
     SENTRY_DSN: ${ssm:/secrets/${self:provider.stage}/sentry_dsn/${self:service}}
+    SERVICE_NAME: ${self:service}
 
 functions:
   get-presigned-url:
