--- a/web/package.json
+++ b/web/package.json
@@ -84,6 +84,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-storybook": "^0.6.15",
     "postcss": "^8.4.31",
+    "postcss-nesting": "^12.0.2",
     "prettier": "^3.1.0",
     "semantic-release": "^22.0.12",
     "semantic-release-monorepo": "^7.0.5",
